--- a/App/Views/home.html
+++ b/App/Views/home.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <p>Hello from a Twig template, {{ name }}!</p>
+    <!-- <p>Hello from a Twig template, {{ name }}!</p> -->
 
     <ul>
-        {% for colour in colours %}
-            <li>{{ colour }}</li>
+        {% for shop in shops %}
+            <li>{{ shop.shop_name }}</li>
         {% endfor %}
     </ul>
 </body>
